# bun-wasm

./: .gitignore  README.md  app.cabal  app.ts  bunfig.toml  index.spec.ts  package.json
.github/workflows/: main.yml
app/: Main.hs
